# dbsysproject

./: CMakeLists.txt  Dockerfile  GENERATE_DATA.md  Makefile  QUICK_START.md  README.md  REPORT_GUIDE.md  build-windows.bat  generate_data.bat  generate_data.sh  run-simple.bat  run-simple.sh
include/: block.h  buffer.h  common.h  file_manager.h  join.h  optimized_join.h  record.h  table.h
src/: block.cpp  buffer.cpp  file_manager.cpp  join.cpp  main.cpp  optimized_join.cpp  record.cpp  table.cpp
